# ipn-nodo

./: .gitignore  CMakeLists.txt  README.md  custom_part.csv  sdkconfig  sdkconfig_base
caracterizacion/: ble_closed.csv  ble_open.csv  wifi_open.csv
caracterizacion/wifi-closed/: wifi_closed.csv
doc/instructions/: README.md
main/: CMakeLists.txt  Kconfig.projbuild  gatt_def.h  init.c  init.h  ipn-nodo.c  measure.c  measure.h  measure_def.c  nodo_ble.c  nodo_ble.h  nodo_bluetooth.c  nodo_bluetooth.h  nodo_def.h  nodo_events.h  nodo_gattc.c  nodo_gattc.h  nodo_gatts.c  nodo_gatts.h  nodo_json.c  nodo_json.h  nodo_mac.c  nodo_mac.h  nodo_nvs.c  nodo_nvs.h  nodo_queue.h  nodo_spiffs.c  nodo_spiffs.h  nodo_web.c  nodo_web.h  nodo_wifi.c  nodo_wifi.h
main/gatt/: gatt_def.c  gatt_def.h  gattc.c  gattc.h  gatts.c  gatts.h
main/measure/: measure.c  measure.h  measure_def.h
main/storage/: nodo_nvs.c  nodo_nvs.h  spiffs.c  spiffs.h
main/utils/: mac.c  mac.h  time.c  time.h
main/web/: http.c  http.h  json.c  json.h  web_common.h  websocket.c  websocket.h
pcb/estacion-esp32/: estacion-esp32-Edge_Cuts.gm1  estacion-esp32-cache.lib  estacion-esp32.kicad_pcb  estacion-esp32.kicad_pro  estacion-esp32.kicad_sch  estacion-esp32.pro  estacion-esp32.sch  fp-lib-table  ipn-nodo.dcm  ipn-nodo.kicad_sym  ipn-nodo.lib  logo-escom-10.kicad_mod  logo-escom.kicad_mod  logo-ipn.kicad_mod  sym-lib-table
sensores/: bh1750.py  hw390.py  lm35.py  lm35_err.py  rssi_plot.py
sensores/hw390/: calibracion1.csv  calibracion1_w_avg.csv  curva_log2.tiff  hw390_all.csv  hw390_all_w_err.csv  (+1 more)
(+22 files in other folders)
